--- a/5bit/iis/projekt/doc.html
+++ b/5bit/iis/projekt/doc.html
@@ -18,27 +18,21 @@
 <h1>Magický svìt</h1> <!-- Nahradte názvem svého zadání -->
 
 <dl>
-	<dt>Autoøi</dt>
-	<dd>První jméno <!-- Nahraïte skuteèným jménem a e-mailem autora a popisem èinnosti -->
-	    <a href="mailto:xautor01@stud.fit.vutbr.cz">xautor01@stud.fit.vutbr.cz</a> -
-		správa u¾ivatelù a u¾ivatelské rozhraní
+	<dt>Autor</dt>
+	<dd>Tomá¹ Aubrecht <!-- Nahraïte skuteèným jménem a e-mailem autora a popisem èinnosti -->
+	    <a href="mailto:xaubre02@stud.fit.vutbr.cz">xaubre02@stud.fit.vutbr.cz</a> - Celý projekt
 	</dd>
-	<dd>Druhé jméno <!-- Nahraïte skuteèným jménem a e-mailem autora a popisem èinnosti -->
-	    <a href="mailto:xautor02@stud.fit.vutbr.cz">xautor02@stud.fit.vutbr.cz</a> - 
-		databázový subsystém
-	</dd>
+
 	<dt>URL aplikace</dt>
-	<dd><a href="http://www.stud.fit.vutbr.cz/~xautor01/IIS">http://www.stud.fit.vutbr.cz/~xautor01/IIS</a></dd>
-	<dd>(pokud má aplikace více vstupních stránek, napi¹te obdobnì dal¹í URL)</dd>
+	<dd><a href="https://www.stud.fit.vutbr.cz/~xaubre02/IIS">https://www.stud.fit.vutbr.cz/~xaubre02/IIS</a></dd>
 </dl>
 
 <h2>U¾ivatelé systému pro testování</h2>
-<p>Uveïte prosím existující zástupce <strong>v¹ech rolí u¾ivatelù</strong>.</p>
 <table>
 <tr><th>Login</th><th>Heslo</th><th>Role</th></tr>
-<tr><td>admin</td><td>admin</td><td>Administrátor</td></tr>
-<tr><td>prodavac</td><td>prodavac</td><td>Prodavaè</td></tr>
-<tr><td>franta</td><td>franta</td><td>Zákazník</td></tr>
+<tr><td>admin</td><td>root</td><td>Administrátor</td></tr>
+<tr><td>Gandalf</td><td>123456</td><td>U¾ivatel</td></tr>
+<tr><td>Merlin</td><td>123456</td><td>U¾ivatel</td></tr>
 </table>
 
 <h2>Implementace</h2>
