WAP: script in progress

--- a/mis/2mis/wap/demo.html
+++ b/mis/2mis/wap/demo.html
@@ -17,8 +17,8 @@
 			<div class="examples">
 				<span>Zástupci</span>
 				<span class="multiimage">
-					<a href="http://m.wsj.net/video/20160906/20160906panda/20160906panda_1280x720.jpg">
-						<img src="http://m.wsj.net/video/20160906/20160906panda/20160906panda_1280x720.jpg" alt="Panda">
+					<a>
+						<img src="http://m.wsj.net/video/20160906/20160906panda/20160906panda_1280x720.jpg" onclick="openPreview()" alt="Panda">
 					</a>
 					<a href="https://www.sciencemag.org/sites/default/files/styles/article_main_large/public/images/cc_Giraffes_16x9.jpg?itok=dKmuVKO6">
 						<img src="https://www.sciencemag.org/sites/default/files/styles/article_main_large/public/images/cc_Giraffes_16x9.jpg?itok=dKmuVKO6" alt="Zebra">
@@ -39,7 +39,7 @@
 			<div class="examples">
 				<span>Zástupci</span>
 				<span class="multiimage">
-					<a href="https://www.naturalworldsafaris.com/~/media/images/wildlife/bengal-tiger/nws-st-bengal-tiger-2.jpg">
+					<a onclick="return openPreview();" href="https://www.naturalworldsafaris.com/~/media/images/wildlife/bengal-tiger/nws-st-bengal-tiger-2.jpg">
 						<img src="https://www.naturalworldsafaris.com/~/media/images/wildlife/bengal-tiger/nws-st-bengal-tiger-2.jpg" alt="Tygr">
 					</a>
 					<a href="https://ichef.bbci.co.uk/images/ic/1920x1080/p02pws03.jpg">
